--- a/frontend/app/ui/alumno/tabla/Tabla.css
+++ b/frontend/app/ui/alumno/tabla/Tabla.css
@@ -1,6 +1,5 @@
-
 .sec{
-    background-color: white;
+    background-color: #fd0000;
     width: 90%;
     margin-top: 12%;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.351);
@@ -8,6 +7,7 @@
     border-radius: 10px;
     margin-bottom: 20%;
     overflow-x:auto;
+
 }
 .shared-table {
     border-collapse: collapse;
@@ -17,20 +17,18 @@
 
 .shared-td,.shared-th{
     text-align: center;
-    padding: 30px;
-    font-size: 20px;
-
+    padding: 10px;
+    font-size: 14px;
 }
 .shared-td{
     border-top: 1px solid;
 }
 #shared-table-p{
-    background-color: rgba(148, 80, 3, 0.582);
+    background-color: rgb(47, 110, 233);
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-
 }
 /*tr:nth-child(even){background-color: #f2f2f2}*/
 .shared-tr{
@@ -56,6 +54,4 @@
     cursor: pointer;
     border-radius: 5px;
     text-decoration: none;
-    color: white;
-
 }
