--- a/frontend/app/ui/alumno/tabla/Tabla.css
+++ b/frontend/app/ui/alumno/tabla/Tabla.css
@@ -1,5 +1,5 @@
 .sec{
-    background-color: #fd0000;
+    background-color: #2f6ee9;
     width: 90%;
     margin-top: 12%;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.351);
@@ -17,7 +17,7 @@
 
 .shared-td,.shared-th{
     text-align: center;
-    padding: 10px;
+    padding: 2px;
     font-size: 14px;
 }
 .shared-td{
